[project]
name = "rratalog"
version = "0.1.0"
description = "A comprehensive catalog of Rotating Radio Transients (RRATs), including published parameters, machine-readable data, and an interactive web interface."
authors = [
    { name = "Devansh Agarwal", email = "devansh.kv@gmail.com" },
    { name = "Evan Lewis", email = "efl0003@mix.wvu.edu" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "tombi>=0.9.0",
]
